
[tool.ruff]

ignore = [
	"F403",
	"E701",
]

line-length = 100

[tool.mypy]

mypy_path = "${MYPY_CONFIG_FILE_DIR}/../kpi_mcdr/:${MYPY_CONFIG_FILE_DIR}/../login_proxy_mcdr/:${MYPY_CONFIG_FILE_DIR}/../packet_parser_mcdr/"
ignore_missing_imports = true
disable_error_code = ['misc']

[tool.poetry]

name = "pcc"
version = "0.0.0"
description = "A MCDR plugin allows you send MCDR commands privately"
authors = [
	"zyxkad"
]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.11"
